/* $Id: ChangeLog,v 1.1683 2001-09-17 13:31:05 sandervl Exp $ */

 2001-09-17: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Must return AWP_ACTIVATE/AWP_DEACTIVATE flags in
                  WM_ADJUSTWINDOWPOS (SWP_ACTIVATE/SWP_DEACTIVATE).
                  This ensures activation is handled properly.
                  No longer necessary to manually send WM_ACTIVATE messages.
                o Only forward SC_CLOSE syscommand to top level window
                  if generated by keyboard

 2001-09-15: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Some focus/activation changes
                o Translation fix for WM_SYSCOMMAND; SC_CLOSE now always
                  directed to top-level window. (OS/2 look only)
    - ODINBUG:  o Update by Herwig Bauernfeind
    - OLEAUT32/OLE32/QUARTZ/COMDLG32:
                o Wine updates
    - COMCTL32: o Wine updates for toolbar, pager & rebar controls
                o Treeview bugfix when deleting the selected item
                  (fixes crash in UltraEdit when opening files)
    - *         o Put back original sources. Extremely annoying to
                  add tags and change tabs in files.

 2001-09-11: knut st. osmundsen <kosmunds@csc.com>
    - kKrnlLib: o FYI: Win32k revamp/split-up. Not yet completed.

 2001-09-10: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o VirtualQuery fix; DosQueryMem doesn't always return region
                  size in pages, so round up size to next page boundary
                  (fixes loop during Netscape 4.7 startup)
    - GDI32:    o DPtoLP fix; signed/unsigned comparison failed
                  (fixes huge fonts in Netscape 4.7)
                o StretchDIBits fix; clear ulCompression for BI_BITFIELDS
                  or else WGSS blit will fail
                  (fixes black pictures in Netscape 4.7)

 2001-09-09: Sander van Leeuwen <sandervl@xs4all.nl>
    - TAPI32:   o Some updates
    - OLEAUT32: o Wine typelib updates
